--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.64.0",
+    "react-hot-toast": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "yup": "^1.7.1"
   },
