--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.12.2",
     "next": "15.5.2",
     "postcss": "^8.5.6",
     "react": "19.1.0",
