--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "antd": "^5.27.4",
     "autoprefixer": "^10.4.21",
     "axios": "^1.12.2",
     "next": "15.5.2",
@@ -18,6 +19,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.64.0",
     "react-hot-toast": "^2.6.0",
+    "sass": "^1.93.2",
     "tailwindcss": "^3.4.17",
     "yup": "^1.7.1"
   },
