--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
-    "antd": "^5.27.4",
+    "antd-mobile": "^5.41.1",
     "autoprefixer": "^10.4.21",
     "axios": "^1.12.2",
     "next": "15.5.2",
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.64.0",
     "react-hot-toast": "^2.6.0",
     "sass": "^1.93.2",
+    "scss": "^0.2.4",
     "tailwindcss": "^3.4.17",
     "yup": "^1.7.1"
   },
