--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "sass": "^1.93.2",
     "scss": "^0.2.4",
     "tailwindcss": "^3.4.17",
-    "yup": "^1.7.1"
+    "yup": "^1.7.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
